<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="productPromo"
                type="id.surya.l_extras.data.model.ProductPromo"/>

        <variable
                name="masterItemCallback" type="id.surya.home.master.MasterItemCallback"/>
    </data>

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/dimens_8dp"
            app:cardCornerRadius="0dp">

        <LinearLayout
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:layout_width="match_parent"
                android:onClick="@{() -> masterItemCallback.onItemProductSelected(productPromo)}"
                android:layout_height="wrap_content"
                android:minHeight="172dp"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:adjustViewBounds="true"
                    app:imageUrl="@{productPromo.imageUrl}"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/dimens_16dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fs_joey"
                        android:text="@string/product_title"
                        android:textSize="@dimen/size_14sp"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/fs_joey_bold"
                        android:maxLines="1"
                        android:text="@{productPromo.title}"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/size_20sp"
                        tools:text="@string/app_name"/>

                <TextView
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimens_16dp"
                        android:fontFamily="@font/fs_joey"
                        android:text="@string/price"
                        android:textSize="@dimen/size_14sp"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fs_joey"
                        android:text="@{productPromo.price}"
                        android:textSize="@dimen/size_16sp"
                        tools:text="7.0/10"/>

                <TextView
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimens_16dp"
                        android:fontFamily="@font/fs_joey"
                        android:text="@string/description"
                        android:textSize="@dimen/size_14sp"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/fs_joey"
                        android:maxLines="2"
                        android:text="@{productPromo.description}"
                        android:textSize="@dimen/size_16sp"
                        tools:text="7.0/10"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>